Agregado correo electrónico gronegroup@gmail.com en sección Nosotros

--- a/index.html
+++ b/index.html
@@ -3019,9 +3019,14 @@
                         <p style="color:#666;font-size:16px;margin-bottom:24px;line-height:1.6;">
                             Nuestro equipo está disponible para ayudarte a encontrar la solución perfecta para tus necesidades
                         </p>
-                        <a href="https://wa.me/543794009856" target="_blank" style="display:inline-block;background:#25D366;color:white;padding:16px 40px;border-radius:8px;text-decoration:none;font-weight:600;font-size:16px;transition:all 0.3s;">
-                            Contactar por WhatsApp
-                        </a>
+                        <div style="display:flex;flex-wrap:wrap;gap:16px;justify-content:center;align-items:center;">
+                            <a href="https://wa.me/543794009856" target="_blank" style="display:inline-block;background:#25D366;color:white;padding:16px 32px;border-radius:8px;text-decoration:none;font-weight:600;font-size:16px;transition:all 0.3s;">
+                                WhatsApp
+                            </a>
+                            <a href="mailto:gronegroup@gmail.com" style="display:inline-block;background:#1a1a1a;color:white;padding:16px 32px;border-radius:8px;text-decoration:none;font-weight:600;font-size:16px;transition:all 0.3s;">
+                                gronegroup@gmail.com
+                            </a>
+                        </div>
                     </div>
                 </div>
             `;
