--- a/index.html
+++ b/index.html
@@ -2756,7 +2756,7 @@
                         <h2 style="font-size:28px;font-weight:600;color:#1a1a1a;margin-bottom:8px;">Equipos de Seguridad</h2>
                         <p style="color:#666;font-size:16px;">Selecciona una categoría para ver los productos</p>
                     </div>
-                    <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:20px;">
+                    <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:20px;">
                         ${subcategories.map(sub => `
                             <div onclick="selectSubcategory('${sub}')" style="
                                 background:white;
