--- a/index.html
+++ b/index.html
@@ -2756,19 +2756,19 @@
                         <h2 style="font-size:28px;font-weight:600;color:#1a1a1a;margin-bottom:8px;">Equipos de Seguridad</h2>
                         <p style="color:#666;font-size:16px;">Selecciona una categoría para ver los productos</p>
                     </div>
-                    <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:20px;">
+                    <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:24px;max-width:1200px;">
                         ${subcategories.map(sub => `
                             <div onclick="selectSubcategory('${sub}')" style="
                                 background:white;
                                 border:2px solid #e0e0e0;
                                 border-radius:12px;
-                                padding:24px 20px;
+                                padding:28px 24px;
                                 cursor:pointer;
                                 transition:all 0.3s;
-                                text-align:left;
+                                text-align:center;
                             " onmouseover="this.style.borderColor='#FF6B6B';this.style.transform='translateY(-4px)';this.style.boxShadow='0 8px 24px rgba(0,0,0,0.12)';" onmouseout="this.style.borderColor='#e0e0e0';this.style.transform='translateY(0)';this.style.boxShadow='none';">
-                                <div style="font-size:18px;font-weight:600;color:#1a1a1a;margin-bottom:8px;">${sub}</div>
-                                <div style="color:#666;font-size:14px;">${subcategoryMap[sub]} producto${subcategoryMap[sub] !== 1 ? 's' : ''}</div>
+                                <div style="font-size:17px;font-weight:600;color:#1a1a1a;margin-bottom:10px;line-height:1.3;">${sub}</div>
+                                <div style="color:#888;font-size:13px;">${subcategoryMap[sub]} producto${subcategoryMap[sub] !== 1 ? 's' : ''}</div>
                             </div>
                         `).join('')}
                     </div>
