--- a/index.html
+++ b/index.html
@@ -2537,6 +2537,17 @@
             {id: 430, name: 'VSA-606A', description: 'MICROFONO BOX PARA CCTV', price: 14850, category: 'camaras', subcategory: 'Accesorios y Conectores', image: ''},
             {id: 431, name: 'RCA-BNC', description: 'CONECTOR RCA A BNC', price: 900, category: 'camaras', subcategory: 'Accesorios y Conectores', image: ''},
             {id: 432, name: 'VSA-GB100', description: 'REDUCTOR DE RUIDO', price: 13500, category: 'camaras', subcategory: 'Accesorios y Conectores', image: ''},
+            // CABLES UTP PRISMATIC (precios en ARS, cotización 1500)
+            {id: 500, name: 'PRM-L158/100', description: 'CABLE UTP CAT5E ECONOMICO COBRE/ALUMINIO EXTERNO 100M - COLOR NEGRO - PRISMATIC', price: 24750, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 501, name: 'PRM-L158/2', description: 'CABLE UTP CAT5E ECONOMICO COBRE/ALUMINIO EXTERNO 100M CON PAR DE ALIMENTACIÓN - COLOR NEGRO - PRISMATIC', price: 43875, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 502, name: 'PRM-L208', description: 'CABLE UTP CAT5E ECONOMICO COBRE/ALUMINIO INTERNO 100M - COLOR GRIS - PRISMATIC', price: 61875, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 503, name: 'PRM-L209', description: 'CABLE UTP CAT5E 100% COBRE INTERNO 305M - COLOR AZUL - PRISMATIC', price: 72000, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 504, name: 'PRM-L651', description: 'CABLE UTP CAT6 ECONOMICO COBRE/ALUMINIO INTERNO 305M - COLOR GRIS - PRISMATIC', price: 168750, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 505, name: 'PRM-L650', description: 'CABLE UTP CAT6 ECONOMICO COBRE/ALUMINIO EXTERNO 305M - COLOR NEGRO - PRISMATIC', price: 101250, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 506, name: 'PRM-L650TAS', description: 'CABLE UTP CAT6 ECONOMICO ALUMINIO/ALUMINIO EXTERNO 305M AUTOSOPORTADO - COLOR NEGRO - PRISMATIC', price: 168750, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 507, name: 'PRM-L650TAS/2COB', description: 'CABLE UTP CAT6 ECONOMICO ALUMINIO/ALUMINIO EXTERNO 305M AUTOSOPORTADO CON PAR DE ALIMENTACION - COLOR NEGRO - PRISMATIC', price: 371250, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 508, name: 'PRM-L150TAS', description: 'CABLE UTP CAT6 100% COBRE EXTERNO AUTOSOPORTADO 305M - COLOR NEGRO - PRISMATIC', price: 265500, category: 'camaras', subcategory: 'Cable UTP', image: ''},
+            {id: 509, name: 'PRM-L160TAS', description: 'CABLE UTP CAT6 100% COBRE EXTERNO AUTOSOPORTADO 305M - COLOR NEGRO - PRISMATIC', price: 303750, category: 'camaras', subcategory: 'Cable UTP', image: ''},
         ];
         
         const catalogSortOrder = {};
